fix: restructured list stuff